# os

./: .gitignore  Cargo.toml  Makefile  README.md
chicken-kernel/: Cargo.toml  boot.s  build.rs  linker.ld  x86_64-unknown-none-chicken.json
chicken-kernel/.cargo/: config.toml
chicken-kernel/asm/: boot.asm  interrupts.asm  msr.asm
chicken-kernel/src/: gdt.rs  main.rs
chicken-kernel/src/base/: gdt.rs  mod.rs  msr.rs
chicken-kernel/src/base/acpi/: mod.rs  rsd.rs  sdt.rs
chicken-kernel/src/base/acpi/madt/: entry.rs  mod.rs
chicken-kernel/src/base/gdt/: descriptor.rs  mod.rs  tss.rs
chicken-kernel/src/base/interrupts/: idt.rs  isr.rs  mod.rs
chicken-kernel/src/base/io/: mod.rs  pic.rs
chicken-kernel/src/base/io/apic/: mod.rs  (+2 more)
chicken-kernel/src/memory/: mod.rs  paging.rs
chicken-kernel/src/memory/kheap/: bump.rs  linked_list.rs  mod.rs
chicken-kernel/src/memory/pmm/: bit_map.rs  mod.rs
chicken-kernel/src/memory/vmm/: mod.rs  object.rs
chicken-kernel/src/scheduling/: mod.rs  spin.rs  task.rs
chicken-kernel/src/scheduling/task/: mod.rs  process.rs  thread.rs
chicken-kernel/src/video/: framebuffer.rs  mod.rs  text.rs
chicken-loader/: Cargo.toml
chicken-loader/.cargo/: config.toml
chicken-loader/src/: file.rs  graphics.rs  main.rs  memory.rs
chicken-util/: Cargo.toml
chicken-util/fonts/: ext-light32.psf
chicken-util/src/: lib.rs
chicken-util/src/graphics/: font.rs  framebuffer.rs  mod.rs
chicken-util/src/memory/: mod.rs
chicken-util/src/memory/paging/: index.rs  manager.rs  mod.rs
chicken-util/src/memory/pmm/: bit_map.rs  mod.rs
(+4 files in other folders)
